--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,8 @@
 {
     "semi": true,
     "trailingComma": "none",
-    "singleQuote": false,
-    "printWidth": 100,
-    "tabWidth": 4
+    "singleQuote": true,
+    "printWidth": 80,
+    "tabWidth": 2,
+    "useTabs": false
 }
